src/components/WalkingCharacter.css
.character-container {
  position: sticky;
  top: 0;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  margin-left: -23px;
}

.character {
  position: relative;
  width: 48px;
  height: 69px;
  overflow: hidden;
  z-index: 9;
}

.character img {
  position: absolute;
  top: 0;
  left: 0;
  width: 192px; /* 4 frames */
  height: 69px;
  object-fit: none;
  object-position: 0 0;
  image-rendering: pixelated;
}

.walkingDown img,
.walkingUp img {
  animation: walkCycle 0.4s steps(4) infinite;
}

.darkness-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(
    circle 200px at var(--light-x) var(--light-y),
    transparent 0%,
    rgba(0, 0, 0, 0) 5%,

    rgba(0, 0, 0, calc(0.1 * var(--transparency))) 10%,
    rgba(0, 0, 0, calc(0.12 * var(--transparency))) 15%,
    rgba(0, 0, 0, calc(0.23 * var(--transparency))) 20%,
    rgba(0, 0, 0, calc(0.33 * var(--transparency))) 25%,
    rgba(0, 0, 0, calc(0.42 * var(--transparency))) 30%,
    rgba(0, 0, 0, calc(0.5 * var(--transparency))) 34%,
    rgba(0, 0, 0, calc(0.57 * var(--transparency))) 40%,
    rgba(0, 0, 0, calc(0.64 * var(--transparency))) 45%,
    rgba(0, 0, 0, calc(0.71 * var(--transparency))) 50%,
    rgba(0, 0, 0, calc(0.77 * var(--transparency))) 55%,
    rgba(0, 0, 0, calc(0.82 * var(--transparency))) 60%,
    rgba(0, 0, 0, calc(0.86 * var(--transparency))) 65%,
    rgba(0, 0, 0, calc(1 * var(--transparency))) 99%
  );
  pointer-events: none;
  z-index: 9;
}
.character-container {
  z-index: 9;
}

.character-wrapper {
  margin-left: -10px;
}

.idle img {
  object-position: 0 0;
}

@keyframes walkCycle {
  from {
    object-position: 0 0;
  }
  to {
    object-position: -192px 0;
  }
}

@media (min-width: 960px) {
  /* MD breakpoint in Material-UI */
  .character-container {
    justify-content: flex-start;
    margin-left: 10px; /* Adjust this value to position the character within the column */
  }
  .character-wrapper {
    margin-left: 10px;
  }
}

